...
    <string name="enter_value">Enter Value</string>
    <string name="enter_a_value">Enter a Value</string>
    <string name="required">Required</string>
    <string name="today">Today</string>
    <string name="now">Now</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="filter">Filter %1$s</string>
    <string name="search">Search</string>
    <string name="numeric_range_helper_text">Enter value from %1$s to %2$s</string>
    <string name="value_must_be_from_to">Value must be from %1$s to %2$s</string>
    <string name="less_than_min_value">Less than minimum value %1$s</string>
...
    <!--suppress AndroidLintPluralsCandidate-->
    <string name="ff_time_picker_minute_suffix">%1$d minutes</string>
    <string name="ff_time_picker_minute_text_field">for minutes</string>
    <string name="ff_time_picker_period_toggle_description">Select AM or PM</string>
    <string name="ff_time_picker_pm">PM</string>

    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="rename_attachment">Rename Attachment</string>
    <string name="name">Name</string>
    <string name="choose_from_files">Choose From Files</string>
    <string name="attachment_error">Error Adding Attachment</string>
    <string name="no_app_found">No application found to open this file type.</string>
    <string name="attachment_too_large">The File is too large. Please add a file less than 50 MB.</string>
    <string name="attachment_is_empty">Empty files are not supported</string>
    <string name="download_empty_file">Empty files cannot be downloaded</string>
    <string name="attachment_deleted">%1s was deleted successfully</string>
...
    <string name="value_must_be_a_guid">Value must be a valid GUID</string>
    <string name="delete_attachment_title">Delete Attachment?</string>
    <string name="delete_attachment_confirmation">Are you sure you want to delete this attachment?</string>
    <string name="download_failed">Unable to download this file.</string>
    <string name="file_size_exceeds_limit">File Size Exceeds Limit</string>
    <string name="unsupported_file_type">Unsupported File Type</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="none_selected">None Selected</string>
    <string name="the_form_has_validation_errors">The form has validation errors</string>
    <string name="the_form_has_edits">The form has edits</string>
    <string name="do_you_want_to_save_your_changes">Do you want to save your changes?</string>
    <string name="no_associations_found">No associations to show</string>
...
    <string name="discard_changes_confirmation">Are you sure you want to discard the changes?</string>
    <string name="record_audio">Record Audio</string>
    <string name="ready_to_record_audio">Ready to record audio.</string>
    <string name="recording_audio">Recording audio…</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="take_video">Take Video</string>
    <string name="max_attachments_limit_reached">The maximum number of attachments allowed is %1$d</string>
    <string name="media_too_long">This media is too long. Maximum allowed duration is %1$d seconds.</string>
    <string name="this_file_is_too_large">This file is too large. Maximum allowed size is %1$d MB.</string>
    <string name="attachment_with_name">Attachment: %1$s</string>
    <string name="add_attachment">Add Attachment</string>
    <string name="there_are_validation_errors">There are validation errors</string>
    <string name="view_errors">View Errors</string>
    <string name="error_saving_edits">Error savings edits</string>
    <string name="an_error_occurred_while_saving_the_edits">An error occurred while saving the edits: %1$s</string>
    <plurals name="min_attachments_required">
        <item quantity="zero">At least %1$d attachments are required</item>
...
